--- a/HitL-SLAM/CMakeLists.txt
+++ b/HitL-SLAM/CMakeLists.txt
@@ -56,7 +56,7 @@ OPTION(CALIBRATION_TARGETS "Enable complication of delta-calibration" FALSE)
 
 #===============================================================================
 # Ceres-Solver Library, Xml2
-IF (RESEARCH_TARGETS)
+#IF (RESEARCH_TARGETS)
 
   FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options)
   INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
@@ -66,11 +66,11 @@ IF (RESEARCH_TARGETS)
 
   FIND_PACKAGE(OpenCV REQUIRED)
 
-ENDIF (RESEARCH_TARGETS)
+#ENDIF (RESEARCH_TARGETS)
 #===============================================================================
 
-FIND_PACKAGE(freenect2 REQUIRED)
-INCLUDE_DIRECTORIES(${freenect2_INCLUDE_DIRS})
+#FIND_PACKAGE(freenect2 REQUIRED)
+#INCLUDE_DIRECTORIES(${freenect2_INCLUDE_DIRS})
 find_package(OpenCV REQUIRED)
 INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
 FIND_PACKAGE(Qt4 REQUIRED)
@@ -78,8 +78,8 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLUT REQUIRED)
 #FIND_PACKAGE(USB REQUIRED)
 FIND_PACKAGE(Lua51 REQUIRED)
-FIND_PACKAGE(SDL REQUIRED)
-FIND_PACKAGE(SDL_ttf REQUIRED)
+#FIND_PACKAGE(SDL REQUIRED)
+#FIND_PACKAGE(SDL_ttf REQUIRED)
 FIND_PACKAGE(Ceres REQUIRED)
 INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})
 
@@ -191,7 +191,7 @@ INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${USB_INCLUDE_DIR})
 
 SET(libs roslib roscpp ncurses popt pthread ${GTK2_LIBRARIES} glut
-    ${OPENGL_LIBRARY} ${GLEW_LIBRARY} ${LUA_LIBRARIES} rt
+    ${OPENGL_LIBRARY} ${GLEW_LIBRARY} ${LUA_LIBRARIES} rt -lboost_system
     ${BUILD_SPECIFIC_LIBRARIES} glog rosbag X11)
 
 #SET(HW_SRCS
