Fixed libpng saving bug

--- a/HitL-SLAM/CMakeLists.txt
+++ b/HitL-SLAM/CMakeLists.txt
@@ -82,6 +82,9 @@ FIND_PACKAGE(Lua51 REQUIRED)
 #FIND_PACKAGE(SDL_ttf REQUIRED)
 FIND_PACKAGE(Ceres REQUIRED)
 INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})
+#Arthur
+FIND_PACKAGE(PNG REQUIRED)
+INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
 
 SET(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
@@ -192,7 +195,7 @@ INCLUDE_DIRECTORIES(${USB_INCLUDE_DIR})
 
 SET(libs roslib roscpp ncurses popt pthread ${GTK2_LIBRARIES} glut
     ${OPENGL_LIBRARY} ${GLEW_LIBRARY} ${LUA_LIBRARIES} rt -lboost_system
-    ${BUILD_SPECIFIC_LIBRARIES} glog rosbag X11)
+    ${BUILD_SPECIFIC_LIBRARIES} glog rosbag X11 ${PNG_LIBRARY})
 
 #SET(HW_SRCS
 #  src/hardware/serial.cc
